tests-integration/tests/roundtrip/invalid/semantic/typecheck/allDiff/01/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic/typecheck/allDiff/01/input.essence:2:23:
  |
2 | such that b = allDiff(5)
  |                       ^
Type error: 5
	Expected: matrix
	Got: int